# orcanet-rust

./: .gitignore  Cargo.toml  ReadMe.MD  build.sh  commands.txt  sample_config.json
assets/uml/: file_transfer.txt  http_connect.txt
btc-miner/: Cargo.toml
btc-miner/src/: main.rs
btc-test/: Cargo.toml
btc-test/src/: main.rs
btc_miner/: Cargo.toml
btc_miner/src/: btc_rpc.rs  main.rs
crates/boot_node/: Cargo.toml
crates/boot_node/src/: main.rs
crates/orca_node/src/: macros.rs  main.rs  network.rs  request_handler.rs  utils.rs
crates/orca_node/src/assets/: btc_core_setup.sh  db_commands.yaml  default_config.json
crates/orca_node/src/cli_handlers/: setup.rs  start_node.rs
crates/orca_node/src/common/: btc_rpc.rs  config.rs  mod.rs  types.rs  utils.rs
crates/orca_node/src/db/: db_client.rs  schema.rs
crates/orca_node/src/http/: mod.rs
crates/orca_node/src/http/endpoints/: file_endpoints.rs
crates/orca_node/src/http_server/: http_server.rs  mod.rs
crates/orca_node/src/http_server/endpoints/: mod.rs  wallet_endpoints.rs
crates/orca_node/src/network/: core.rs  event_loop.rs  mod.rs  network_client.rs
crates/orca_node/src/proxy/: proxy_handlers.rs  proxy_payment.rs
crates/relay_server/src/: main.rs
diagrams/uml/: proxy_connection.txt
docs/: BackendHLD.md  BitcoinCoreSetup.md  HTTPConnect.md
file_transfer/: Cargo.toml
file_transfer/src/: btc_rpc.rs  client.rs  common.rs  db_client.rs  http_proxy.rs  http_server.rs  macros.rs  main.rs  network.rs  network_client.rs  request_handler.rs  request_handlers.rs  utils.rs
file_transfer/src/db/: db_client.rs  db_commands.txt  mod.rs  schema.rs
file_transfer/src/http/: http_proxy.rs  http_server.rs  mod.rs  proxy_handlers.rs
file_transfer/src/http/endpoints/: file_endpoints.rs  mod.rs  proxy_endpoints.rs
http_server/: Cargo.toml
http_server/src/: btc_rpc.rs  main.rs
kad/: Cargo.toml
kad/src/: main.rs
kad_new/: Cargo.toml
kad_new/src/: main.rs
kademlia-node/: Cargo.toml
kademlia-node/src/: main.rs
kademlia_node/: Cargo.toml
kademlia_node/src/: kademlia.rs  main.rs  request_handlers.rs
orca_node/: Cargo.toml
orca_node/src/: common.rs  main.rs  network_client.rs  request_handler.rs  utils.rs
orca_node/src/assets/: btc_core_setup.sh  default_config.json
orca_node/src/cli_handlers/: mod.rs  orca_node.rs  setup.rs  setup_handler.rs  start_node.rs
orca_node/src/db/: db_client.rs  schema.rs
orca_node/src/http/: http_proxy.rs  proxy_handlers.rs  proxy_payment.rs
orca_node/src/http/endpoints/: file_endpoints.rs  wallet_endpoints.rs
src/: main.rs  relay_server.rs
