[workspace.package]
edition = "2021"

[workspace]
members = ["bin/boot_node",
    "bin/orca_node",
    "bin/relay_server"
]

workspace.resolver = "1"

#[workspace.dependencies]
#tokio = { version = "1.40.0", features = ["full"] }
#async-std = { version = "1.13.0", features = ["attributes"] }
#clap = { version = "4.5.17", features = ["derive"] }
#tracing = { version = "0.1.40" }
#futures = { version = "0.3.31" }
#tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }