[package]
name = "btc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19.0"
bitcoin = { version = "0.32.2", features = ["rand-std"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4.3"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
time = "0.3.36"