[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = ["async-std", "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "kad", "request-response", "cbor"] }
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
hex = "0.4.3"
bitcoincore-rpc = "0.19.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-timer = "3.0.3"
clap = { version = "4.5.17", features = ["derive"] }
tracing = "0.1.40"
futures = "0.3.30"
async-std = { version = "1.13.0", features = ["attributes"] }
libp2p-stream = "0.2.0-alpha"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rusqlite = "0.32.1"
dirs = "5.0.1"