[package]
name = "boot_node"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
futures = { version = "0.3.31" }
libp2p = { version = "0.54.1", features = ["async-std", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "gossipsub"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["full"] }